refactoring directions endpoints
