# api/docs/swagger.yaml
@@ -169,7 +169,7 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/apierrors.APIError'
-      summary: sign in user with jwt tokens response
+      summary: signs in user with jwt tokens response
       tags:
       - authorization
   /auth/sign-up:
@@ -199,9 +199,95 @@ paths:
           description: Conflict
           schema:
             $ref: '#/definitions/apierrors.APIError'
-      summary: sign up new user
+      summary: signs up new user
       tags:
       - authorization
+  /direction/get:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              items:
+                $ref: '#/definitions/dto.Direction'
+              type: array
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apierrors.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/apierrors.APIError'
+      security:
+      - AccessTokenHeader: []
+      summary: returns user directions
+      tags:
+      - direction
+  /direction/get_all:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              items:
+                $ref: '#/definitions/dto.Direction'
+              type: array
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apierrors.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/apierrors.APIError'
+      security:
+      - AccessTokenHeader: []
+      summary: returns all directions
+      tags:
+      - direction
+  /direction/set:
+    post:
+      consumes:
+      - application/json
+      description: receives direction ids and sets it to user
+      parameters:
+      - description: direction ids
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/dto.IDs'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apierrors.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/apierrors.APIError'
+      security:
+      - AccessTokenHeader: []
+      summary: set directions to user
+      tags:
+      - direction
   /university/get:
     get:
       consumes:
@@ -284,34 +370,6 @@ paths:
       summary: set universities to user
       tags:
       - university
-  /user/get_directions:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              items:
-                $ref: '#/definitions/dto.Direction'
-              type: array
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/apierrors.APIError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/apierrors.APIError'
-      security:
-      - AccessTokenHeader: []
-      summary: returns user directions
-      tags:
-      - user
   /user/get_profile:
     get:
       consumes:
@@ -352,36 +410,6 @@ paths:
       security:
       - AccessTokenHeader: []
       summary: returns user username
-      tags:
-      - user
-  /user/set_directions:
-    post:
-      consumes:
-      - application/json
-      description: receives direction ids and sets it to user
-      parameters:
-      - description: direction ids
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/dto.IDs'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/apierrors.APIError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/apierrors.APIError'
-      security:
-      - AccessTokenHeader: []
-      summary: set directions to user
       tags:
       - user
 securityDefinitions:
